tests/positive/NoDependencies/Foo.juvix
module Foo;

type Bar := bar : Bar;

open Bar using {bar} public;
