tests/negative/InvalidRangeNumber.juvix
module InvalidRangeNumber;

syntax iterator wrong {range := 0};

wrong : Type := Type;
